Added github actions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-website---react-and-tailwindcss",
+  "name": "shopify",
   "private": true,
   "version": "0.0.0",
   "type": "module",
